Reetan.Nayak Dev 25/force-app/main/default/objects/Feed_Post_Swarm_Rule__c/Feed_Post_Swarm_Rule__c.object-meta.xml
<CustomObject>
    <description>A rule indicating what users should auto-follow an object based on posts to records of that object type in Chatter.</description>
    <label>Feed Post Swarm Rule</label>
    <nameField>
        <displayFormat>FPSR-{0000}</displayFormat>
        <label>Feed Post Swarm Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feed Post Swarm Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>