Reetan.Nayak Dev 25/force-app/main/default/objects/Feed_Post_Swarm_Rule__c/fields/Follow_or_Unfollow__c.field-meta.xml
<CustomField>
    <fullName>Follow_or_Unfollow__c</fullName>
    <label>Follow or Unfollow?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Follow</fullName>
                <default>true</default>
                <label>Follow</label>
            </value>
            <value>
                <fullName>Unfollow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>