Reetan.Nayak Dev 25/force-app/main/default/objects/Feed_Post_Swarm_Rule__c/fields/Trigger_Text__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Text__c</fullName>
    <label>Trigger Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>